; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_backend.c_get_opencl_kernel_preferred_wgs_multiple.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_backend.c_get_opencl_kernel_preferred_wgs_multiple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@CL_KERNEL_PREFERRED_WORK_GROUP_SIZE_MULTIPLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__*, i32, i64*)* @get_opencl_kernel_preferred_wgs_multiple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_opencl_kernel_preferred_wgs_multiple(i32* %0, %struct.TYPE_3__* %1, i32 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  store i64 0, i64* %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* %8, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @CL_KERNEL_PREFERRED_WORK_GROUP_SIZE_MULTIPLE, align 4
  %17 = call i32 @hc_clGetKernelWorkGroupInfo(i32* %11, i32 %12, i32 %15, i32 %16, i32 8, i64* %10, i32* null)
  %18 = icmp eq i32 %17, -1
  br i1 %18, label %19, label %20

19:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %23

20:                                               ; preds = %4
  %21 = load i64, i64* %10, align 8
  %22 = load i64*, i64** %9, align 8
  store i64 %21, i64* %22, align 8
  store i32 0, i32* %5, align 4
  br label %23

23:                                               ; preds = %20, %19
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @hc_clGetKernelWorkGroupInfo(i32*, i32, i32, i32, i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
